# project-openslide-demo

./: .gitignore  README.md  main.py  makeclean.zsh  notes.txt  pyproject.toml  requirements.txt  run_patches.sh
src/demo-scripts/: README.md  batch_generate_patches.py  crop_tiff.py  extract_region.py  filter_s3_filenames.py  generate_patches.py  generate_patches_contour.py  get_filenames_from_s3.py  local_batch_generate_patches_contour.py  morphle_stitch.py  s3_batch_generate_patches_contour.py  slide_info.py  slides_filtered.txt  slides_to_process.txt
