[project]
name = "proj-openslide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.0",
    "flask>=3.1.2",
    "imagecodecs>=2025.3.30",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "openpyxl>=3.1.5",
    "openslide-bin>=4.0.0.8",
    "openslide-python>=1.4.2",
    "pandas>=2.3.3",
    "pillow>=10.0.0",
    "tifffile>=2025.5.10",
]
